--- a/chat-tool/tool/src/webapp/vm/chat/chef_chat-Toolbar.vm
+++ b/chat-tool/tool/src/webapp/vm/chat/chef_chat-Toolbar.vm
@@ -8,35 +8,37 @@
 doubleDeep = true;
 </script>
 
-<div class="portletBody">
+<div class="portletBody" style="padding-bottom:0">
 	#if($menu)#toolbar($menu)#end
-	<div class="leftNav" style="margin-top:.5em">
-		<form name="viewForm" class="inlineForm" method="post" action="#toolForm("$action")">
+	<div class="navPanel">
+		<div class="viewNav">
+			<form name="viewForm" class="inlineForm" method="post" action="#toolForm("$action")">
 			<input type="hidden" name="eventSubmit_doChange_time_date_display" value="view" />
 			<label for="changeView">$tlang.getString("bar.view")</label>
-			<select id="changeView" name="changeView" size="1" onchange="blur();document.viewForm.submit();">
-				#foreach ($view in ["$tlang.getString('bar.onlytime')", "$tlang.getString('bar.datetime')", "$tlang.getString('bar.onlydate')", "$tlang.getString('bar.nodatetime')"])
-					#if ($selectedView.equals($view))
-						<option value="$view" selected="selected" >$view</option>
-					#else
-						<option value="$view" >$view</option>
+			<span class="skip">$tlang.getString('bar.listnavselect')</span>
+				<select id="changeView" name="changeView" size="1" onchange="blur();document.viewForm.submit();">
+					#foreach ($view in ["$tlang.getString('bar.onlytime')", "$tlang.getString('bar.datetime')", "$tlang.getString('bar.onlydate')", "$tlang.getString('bar.nodatetime')"])
+						#if ($selectedView.equals($view))
+							<option value="$view" selected="selected" >$view</option>
+						#else
+							<option value="$view" >$view</option>
+						#end
 					#end
-				#end
-			</select>
-		</form>
-		<form name="pastForm" class="inlineForm" method="post" action="#toolForm("$action")">
-			<input type="hidden" name="eventSubmit_doToggle_filter" value="filter" />
-##			<label for="changePast" class="skip">$tlang.getString("bar.show")</label>
-			<label for="changePast" class="skip">Show</label>
-			<select id="changePast" name="changePast" size="1" onchange="blur();document.pastForm.submit();">
-				#foreach ($past in [$fewerLabel, $moreLabel])
-					#if ($pastLabel.equals($past))
-						<option value="$past" selected="selected" >$past</option>
-					#else
-						<option value="$past" >$past</option>
+				</select>
+			</form>
+			<form name="pastForm" class="inlineForm" method="post" action="#toolForm("$action")">
+				<input type="hidden" name="eventSubmit_doToggle_filter" value="filter" />
+				<label for="changePast" class="skip">$tlang.getString('bar.listnavselect')</label>
+				<select id="changePast" name="changePast" size="1" onchange="blur();document.pastForm.submit();">
+					#foreach ($past in [$fewerLabel, $moreLabel])
+						#if ($pastLabel.equals($past))
+							<option value="$past" selected="selected" >$past</option>
+						#else
+							<option value="$past" >$past</option>
+						#end
 					#end
-				#end
-			</select>
-		</form>
-	</div>
+				</select>
+			</form>
+		</div>
+	</div>	
 </div>	
