fixed chat js-dom-update to match the latest html structure and restored js-dom-update which had been lost in prior versions
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@9353 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/vm/chat/chef_chat-List.vm
+++ b/chat-tool/tool/src/webapp/vm/chat/chef_chat-List.vm
@@ -17,6 +17,9 @@
 ## this is double deep
 <script type="text/javascript" language="JavaScript">
 doubleDeep = true;
+// set for the chatscript.js
+deleteUrl = '#toolLink($action "doConfirmDeleteMessage")&messageid=';
+deleteMsg = "$tlang.getString('list.del')";
 </script>
 
 ## appendMessage function comes from chatscript.js
