SAK-8301 remove double escapeHtml of chat author in delete confirmation msg
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@21187 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/vm/chat/chef_chat-delete.vm
+++ b/chat-tool/tool/src/webapp/vm/chat/chef_chat-delete.vm
@@ -11,7 +11,7 @@
 		<table class="itemSummary" cellspacing="0">
 			<tr>
 				<th>$tlang.getString("gen.from")</th>
-				<td>$validator.escapeHtml($validator.escapeHtml($message.Header.From.DisplayName))</td>
+				<td>$validator.escapeHtml($message.Header.From.DisplayName)</td>
 			</tr>
 			<tr>
 				<th>$tlang.getString("gen.date")</th> 
