http://bugs.sakaiproject.org/jira/browse/SAK-8799 Fixing the delete operation.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@23000 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
+++ b/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
@@ -12,7 +12,8 @@
 deleteMsg = "<h:outputText value="#{msgs['list.del']}" />";
 </script>
 
-	<script  type="text/javascript" language="JavaScript" src="/sakai-chat-tool/js/chatscript.js"></script>
+	<sakai:script contextBase="/sakai-chat-tool" path="/js/chatscript.js"/>
+	<sakai:script contextBase="/library" path="/js/jquery-1.1.2.js" />
 	
 	<sakai:messages />
 	
