http://bugs.sakaiproject.org/jira/browse/SAK-9489 Fix the id of the object for auto scrolling of the message window.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@29787 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
+++ b/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
@@ -61,6 +61,6 @@ deleteMsg = "<h:outputText value="#{msgs['list.del']}" />";
 		var display_time = <c:out value="${ChatTool.displayTime}" />;
 		var sound_alert = <c:out value="${ChatTool.soundAlert}" />;
 		
-		var objDiv = document.getElementById("chatListWrapper");
+		var objDiv = document.getElementById("Monitor");
    	objDiv.scrollTop = objDiv.scrollHeight;
 	</script>
