NOJIRA. Make sure when chat window is opened, the vertical scroll is set at the bottom of the scroll bar
git-svn-id: https://source.sakaiproject.org/svn/chat/branches/SAK-16191@62030 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
+++ b/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
@@ -9,6 +9,7 @@ deleteUrl = "<h:outputText value="#{ChatTool.toolContext}/sakai.chat.deleteMessa
 </script>
 
 	<sakai:messages />
+	
 
 	<c:set var="deleteUrl" value="${ChatTool.toolContext}/sakai.chat.deleteMessage.helper/deleteMessageConfirm?session.current_message=" />
 
@@ -19,7 +20,7 @@ deleteUrl = "<h:outputText value="#{ChatTool.toolContext}/sakai.chat.deleteMessa
 	  <li><c:out value="<span style=\"color: ${message.color}\">" escapeXml="false"/><c:out value="${message.owner}"/><c:out value="</span>" escapeXml="false" /> 
 
    	  <c:if test="${message.canRemoveMessage}">
-	     <c:out value="<a id=\"topForm:chatList:${serial}:deleteMessage\" href=\"#\" title=\"Delete this message\" onclick=\"location.href='${deleteUrl}${message.chatMessage.id}'\"><img id=\"topForm:chatList:${serial}:deleteIcon\" src=\"${ChatTool.serverUrl}/library/image/sakai/delete.gif\" alt=\"Delete this message\" /></a>" escapeXml="false" />
+	     <c:out value="<a id=\"topForm:chatList:${serial}:deleteMessage\" href=\"#\" title=\"Delete this message\" onclick=\"location.href='${deleteUrl}${message.chatMessage.id}'\"><img id=\"topForm:chatList:${serial}:deleteIcon\" style=\"height:12.5px\" src=\"${ChatTool.serverUrl}/library/image/sakai/delete.gif\" alt=\"Delete this message\" /></a>" escapeXml="false" />
   	  </c:if>
 
   	  <c:if test="${ChatTool.displayId}">
