SAK-10778 Fix for the chat tool becoming extremely slow when there are a massive number of messages by setting a cap on the messages which are retrieved and showing the total number of messages on screen
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@79381 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
+++ b/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
@@ -1,22 +1,11 @@
 
-
-	 
-<script type="text/javascript" language="JavaScript">
-
-// set for the chatscript.js
-deleteMsg = "<h:outputText value="#{msgs['list.del']}" />";
-deleteUrl = "<h:outputText value="#{ChatTool.toolContext}/sakai.chat.deleteMessage.helper/deleteMessageConfirm?session.current_message=" />";
-</script>
-
 	<sakai:messages />
-	
 
 	<c:set var="deleteUrl" value="${ChatTool.toolContext}/sakai.chat.deleteMessage.helper/deleteMessageConfirm?session.current_message=" />
 
-	<c:set var="serial" value="0" />
-	<ul id="topForm:chatList" class="chatList">
-
-        <c:forEach items="${ChatTool.roomMessages}" var="message">
+    <c:set var="serial" value="0" />
+    <ul id="topForm:chatList" class="chatList">
+    <c:forEach items="${ChatTool.roomMessages}" var="message">
 	  <li><c:out value="<span style=\"color: ${message.color}\">" escapeXml="false"/><c:out value="${message.owner}"/><c:out value="</span>" escapeXml="false" /> 
 
    	  <c:if test="${message.canRemoveMessage}">
@@ -42,27 +31,32 @@ deleteUrl = "<h:outputText value="#{ChatTool.toolContext}/sakai.chat.deleteMessa
 	  <c:out value="${message.chatMessage.body}" escapeXml="false" />
 
 	  </li>
-          <c:set var="serial" value="${serial + 1}" />
-	</c:forEach>
-	</ul>
+    <c:set var="serial" value="${serial + 1}" />
+    </c:forEach>
+    </ul>
 
-			<script type="text/javascript" language="JavaScript">
-		var Colors = [ <c:forEach items="${ChatTool.colorMapper.colors}" var="color">"<c:out value="${color}" />", </c:forEach> ""];
-		Colors.pop();
-		
-		var numColors = Colors.length;
-		var nextColor = <c:out value="${ChatTool.colorMapper.next}" />;
-	
-		var ColorMap = new Object();
+<script type="text/javascript" language="JavaScript">
+    //set for the chatscript.js
+    deleteMsg = "<h:outputText value="#{msgs['list.del']}" />";
+    deleteUrl = "<h:outputText value="#{ChatTool.toolContext}/sakai.chat.deleteMessage.helper/deleteMessageConfirm?session.current_message=" />";
+    chat2_shownMessages = ${serial};
+
+    var Colors = [ <c:forEach items="${ChatTool.colorMapper.colors}" var="color">"<c:out value="${color}" />", </c:forEach> ""];
+	Colors.pop();
+
+	var numColors = Colors.length;
+	var nextColor = <c:out value="${ChatTool.colorMapper.next}" />;
+
+	var ColorMap = new Object();
 <c:forEach items="${ChatTool.colorMapper.mappingList}" var="keyvalue">
-		ColorMap["<c:out value="${keyvalue.key}" />"] = "<c:out value="${keyvalue.value}" />";
+	ColorMap["<c:out value="${keyvalue.key}" />"] = "<c:out value="${keyvalue.value}" />";
 </c:forEach>
-	
-		var display_date = <c:out value="${ChatTool.displayDate}" />;
-		var display_time = <c:out value="${ChatTool.displayTime}" />;
-		var display_id = <c:out value="${ChatTool.displayId}" />;
-		var sound_alert = <c:out value="${ChatTool.soundAlert}" />;
-		
-		var objDiv = document.getElementById("Monitor");
+
+    var display_date = <c:out value="${ChatTool.displayDate}" />;
+    var display_time = <c:out value="${ChatTool.displayTime}" />;
+    var display_id = <c:out value="${ChatTool.displayId}" />;
+    var sound_alert = <c:out value="${ChatTool.soundAlert}" />;
+
+    var objDiv = document.getElementById("Monitor");
    	objDiv.scrollTop = objDiv.scrollHeight;
-	</script>
+</script>
