SAK-20375 add optional supression to message components
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@90904 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
+++ b/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
@@ -1,5 +1,5 @@
 
-	<sakai:messages />
+	<sakai:messages rendered="#{!empty facesContext.maximumSeverity}" />
 
 	<c:set var="deleteUrl" value="${ChatTool.toolContext}/sakai.chat.deleteMessage.helper/deleteMessageConfirm?session.current_message=" />
 
