--- a/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
+++ b/chat-tool/tool/src/webapp/jsp/roomMonitor.jspf
@@ -9,7 +9,7 @@
 	  <li><c:out value="<span style=\"color: ${message.color}\">" escapeXml="false"/><c:out value="${message.owner}"/><c:out value="</span>" escapeXml="false" /> 
 
    	  <c:if test="${message.canRemoveMessage}">
-	     <c:out value="<a id=\"topForm:chatList:${serial}:deleteMessage\" href=\"#\" title=\"Delete this message\" onclick=\"location.href='${deleteUrl}${message.chatMessage.id}'\"><img id=\"topForm:chatList:${serial}:deleteIcon\" style=\"margin-bottom:-2px;\" src=\"${ChatTool.serverUrl}/library/image/sakai/delete.gif\" alt=\"${msgs['list.del']}\" /></a>" escapeXml="false" />
+	     <c:out value="<a id=\"topForm:chatList:${serial}:deleteMessage\" href=\"#\" title=\"${msgs['list.del']}\" onclick=\"location.href='${deleteUrl}${message.chatMessage.id}'\"><img id=\"topForm:chatList:${serial}:deleteIcon\" style=\"margin-bottom:-2px;\" src=\"${ChatTool.serverUrl}/library/image/sakai/delete.gif\" alt=\"${msgs['list.del']}\" /></a>" escapeXml="false" />
   	  </c:if>
 
   	  <c:if test="${ChatTool.displayId}">
