SAK-28099; replace presence iframe with a DIV backed by ajax
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@315701 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/css/chat.css
+++ b/chat-tool/tool/src/webapp/css/chat.css
@@ -61,11 +61,24 @@ h3 {
    float:left;
    clear:none;
 }
-iframe {
+.presence {
    height: calc(20em);
 }
 h3.chatListHeadWrapper{
    font-size: 100% !important;
+}
+.presenceList {
+    list-style: none;
+    padding:0px;
+    margin:0px;
+    padding-left: 1em;
+    padding-bottom: 1em;
+}
+.presenceList li {
+    line-height: 1.2em;
+    font-size: 75%;
+    width:100%;
+    text-indent:0em;
 }
 @media screen and (max-width: 1000px) {
   #chatPresenceWrapper {
