SAK-28099; backup code in case event doesn't have a userid; prevent Safari from having scroll bar where not needed
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@315764 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/webapp/css/chat.css
+++ b/chat-tool/tool/src/webapp/css/chat.css
@@ -57,6 +57,7 @@ h3 {
    padding:0px !important;
    margin:0px !important;
    padding-top:0.5em !important;
+   padding-bottom:0.5em !important;
    max-height: 40em; 
    overflow-y: auto;
    overflow-x: hidden;
